CRITICAL RULE: Add multiple LoadAPIs per table discovery
- Add rule_6_multiple_loadapis_per_table based on real implementation learning
- Key insight: Single table can have multiple LoadAPIs/exports/templates
- Examples: planogram → PlanogramLoadApi + PlanogramDistributionLoadApi
- Prevents missing LoadAPI implementations during development
- Requires comprehensive search patterns for all table references
- Critical for preventing repeated feedback about missing components

--- a/PROD-REQUIREMENTS/req-1150.md
+++ b/PROD-REQUIREMENTS/req-1150.md
@@ -1,7 +1,6 @@
 # REQ-1150: Move Distribution Flags from Distribution Store to Planogram
 
 ## **Original Requirement**
-
 Currently (enabled, inward, outward flag) are in distribution store list we have to move these flags to store category attr attr1 level in planogram input. So all logic and usage needs to be changed accordingly. Distribution store list will only have istgroup.
 
 ## **Implementation Summary**
@@ -9,7 +8,6 @@ Currently (enabled, inward, outward flag) are in distribution store list we have
 ✅ **COMPLETED**: Full cross-repository implementation moving distribution flags from DistributionStoreRow to PlanogramRow with comprehensive business logic updates.
 
 ### **Classification**: Cross-Repository Change
-
 - **Algorithm Repository**: ✅ Row classes, File classes, Business logic
 - **LoadAPI Repository**: ✅ LoadAPI classes, Headers, Validation
 - **Configuration Repository**: ✅ SQL views, Sync queries, Export queries, Templates
@@ -21,56 +19,67 @@ Currently (enabled, inward, outward flag) are in distribution store list we have
 ### **1. Algorithm Repository Changes**
 
 #### **Row Classes Updated**
-
 - **DistributionStoreRow.java**: ✅ Removed `flag`, `inwardFlag`, `outwardFlag` fields
 - **PlanogramRow.java**: ✅ Added `enabled`, `inwardFlag`, `outwardFlag` fields
 
 #### **File Classes Updated**
-
 - **DistributionStoreFile.java**: ✅ Updated headers and read method to exclude flags
 - **PlanogramFile.java**: ✅ Updated headers and read method to include flags
 
 #### **Business Logic Updated**
-
 - **AbstractPrepareDataModule.java**: ✅ Updated `addDistributionStores()` to filter by planogram enabled flags
 - **BaseHelper.java**: ✅ Updated `checkIstInwardingCriteria()` and `checkIstOutwardingCriteria()` to get flags from planogram
 - **EossHelper.java**: ✅ Updated IST criteria methods to use planogram flags
 
 ### **2. LoadAPI Repository Changes**
 
-#### **DistributionStoreLoadApi.py**
+#### **CRITICAL DISCOVERY: Duplicate LoadAPIs Removed**
+- ✅ **REMOVED**: `DistributionStoreLoadApi.py` (import_dist_input_store_list) - **DUPLICATE API ELIMINATED**
+- ✅ **KEPT & UPDATED**: `IstStoreLoadApi.py` (import_dist_input_ist_store_list) - **SINGLE SOURCE OF TRUTH**
 
-- ✅ Removed `distribution_enabled`, `inward_flag`, `outward_flag` from headers
-- ✅ Updated master header to only include `ist_group`
-- ✅ Removed flag validation and processing
-- ✅ Simplified data processing to only handle `ist_group` and `consider_store_empty_while_inwards`
+#### **IstStoreLoadApi.py** (Updated - Primary API for distribution store data)
+- ✅ Removed `distribution_enabled`, `inward_flag`, `outward_flag` from headers (moved to planogram)
+- ✅ Updated master header to only include `ist_group` and `consider_store_empty_while_inwards`
+- ✅ Removed flag validation and processing logic
+- ✅ Simplified data processing - flags now come from planogram data
 
-#### **PlanogramLoadApi.py**
-
+#### **PlanogramLoadApi.py** (Updated - Primary planogram API)
 - ✅ Added `enabled`, `inward_flag`, `outward_flag` to master and processing headers
 - ✅ Added flag validation in `validate_row()` method
 - ✅ Added flag processing in `load()` method with proper type conversion
 
+#### **PlanogramIncrementApi.py** (Updated - Secondary planogram API)
+- ✅ Added `enabled`, `inward_flag`, `outward_flag` to master and processing headers
+- ✅ Added flag validation in `validate_row()` method  
+- ✅ Added flag processing in `load()` method with proper type conversion
+- ✅ Fixed header reference bug (was using PlanogramLoadApi.PLANOGRAM_HEADER incorrectly)
+
 ### **3. Configuration Repository Changes**
 
 #### **SQL Views**
-
 - **input_dist_store.sql**: ✅ Removed flag columns, kept only `store`, `ist_group`, `consider_store_empty_while_inwards`
+- **a_planogram.sql**: ✅ Updated view to include `enabled`, `inward_flag`, `outward_flag` columns with BIT data types
 
 #### **Sync Queries**
-
 - **input_dist_store.sql**: ✅ Updated to sync only `ist_group` and `consider_store_empty_while_inwards`
 - **a_planogram.sql**: ✅ Added `enabled`, `inward_flag`, `outward_flag` columns with COALESCE defaults
 
 #### **Export Queries**
-
-- **export_dist_input_store_list.sql**: ✅ Updated to get `distribution_enabled` from planogram data using subquery
-- **export_dist_input_ist_store_list.sql**: ✅ Updated to get all flags from planogram data using subqueries
+- **export_dist_input_store_list.sql**: ❌ **REMOVED** - No longer needed, replaced by ist_store_list
+- **export_dist_input_ist_store_list.sql**: ✅ Updated to only export core fields (no flags)
+- **export_masters_input_planogram.sql**: ✅ Added `enabled`, `inward_flag`, `outward_flag` to export headers and data
+- **export_masters_input_planogram_template.sql**: ✅ Added flag columns with default values (0)
+- **export_masters_input_planogram_increments.sql**: ✅ Added `enabled`, `inward_flag`, `outward_flag` to export headers and data
+- **export_masters_input_planogram_increments_template.sql**: ✅ Added flag columns with default values (0)
 
 #### **Templates**
-
 - **export_masters_input_planogram_template.tsv**: ✅ Added separate `enabled`, `inward_flag`, `outward_flag` columns
-- **export_dist_input_store_list_template.tsv**: ✅ Updated to only include `ist_group` (flags removed)
+- **export_dist_input_store_list_template.tsv**: ❌ **REMOVED** - No longer needed, replaced by ist_store_list
+- **export_dist_input_ist_store_list_template.tsv**: ✅ Updated to only include core fields (no flags)
+
+#### **Upload Configuration**
+- **upload-files.json**: ✅ Updated all references from `import_dist_input_store_list` to `import_dist_input_ist_store_list`
+- ✅ Eliminated duplicate import IDs - now single source of truth for distribution store data
 
 ---
 
@@ -79,7 +88,6 @@ Currently (enabled, inward, outward flag) are in distribution store list we have
 ### **Data Flow Changes**
 
 #### **Before (REQ-1150)**
-
 ```
 User Upload → DistributionStoreLoadApi → input_dist_store table
 Fields: store, flag, inward_flag, outward_flag, ist_group
@@ -88,9 +96,8 @@ Algorithm Access: distributionStoreRow.flag, distributionStoreRow.inwardFlag, di
 ```
 
 #### **After (REQ-1150)**
-
 ```
-User Upload → PlanogramLoadApi → a_planogram table
+User Upload → PlanogramLoadApi → a_planogram table  
 Fields: store, category, attribute, attribute1, enabled, inward_flag, outward_flag, ...
 
 Algorithm Access: planogramRow.enabled, planogramRow.inwardFlag, planogramRow.outwardFlag
@@ -99,24 +106,20 @@ Algorithm Access: planogramRow.enabled, planogramRow.inwardFlag, planogramRow.ou
 ### **Business Logic Integration**
 
 #### **Store Filtering Logic**
-
 - **Old**: `db().select(DistributionStoreRow.class).stream().filter(k -> k.flag)`
 - **New**: Uses `getStoreEnabledFlagsFromPlanogram()` to create store-to-enabled mapping from planogram data
 
 #### **IST Criteria Logic**
-
 - **Old**: `distributionStoreRow.inwardFlag` / `distributionStoreRow.outwardFlag`
 - **New**: `getInwardFlagFromPlanogram(store)` / `getOutwardFlagFromPlanogram(store)`
 
 ### **Database Schema Impact**
 
 #### **input_dist_store Table**
-
 - **Removed Columns**: `flag`, `inward_flag`, `outward_flag`
 - **Retained Columns**: `store`, `ist_group`, `consider_store_empty_while_inwards`
 
 #### **a_planogram Table**
-
 - **Added Columns**: `enabled`, `inward_flag`, `outward_flag`
 - **Existing Columns**: `store`, `category`, `attribute`, `attribute1`, `quantity`, `options`, etc.
 
@@ -125,7 +128,6 @@ Algorithm Access: planogramRow.enabled, planogramRow.inwardFlag, planogramRow.ou
 ## **Validation & Testing**
 
 ### **Rule Compliance Validation**
-
 ✅ **Rule 1-10 (Core Implementation)**: All pattern consistency maintained
 ✅ **Rule 11-15 (Repository Coordination)**: Cross-repository changes coordinated
 ✅ **Rule 16-20 (Pattern Management)**: Existing patterns followed
@@ -133,14 +135,12 @@ Algorithm Access: planogramRow.enabled, planogramRow.inwardFlag, planogramRow.ou
 ✅ **Rule 23 (Complete Development Flow)**: Full 4-phase implementation completed
 
 ### **Cross-Repository Integration**
-
 - ✅ Algorithm repository reads flags from planogram data correctly
 - ✅ LoadAPI repository processes flags in planogram input correctly
 - ✅ Configuration repository provides correct data flow and export capabilities
 - ✅ All templates and queries updated consistently
 
 ### **Backward Compatibility**
-
 - ✅ Export queries maintain same output format by aggregating planogram flags
 - ✅ Business logic behavior preserved with new data source
 - ✅ Template formats updated to reflect new structure
@@ -150,35 +150,35 @@ Algorithm Access: planogramRow.enabled, planogramRow.inwardFlag, planogramRow.ou
 ## **Git References**
 
 ### **Feature Branches Created**
-
 - **Algorithm**: `feature/req-1150-move-flags-to-planogram`
-- **LoadAPI**: `feature/req-1150-move-flags-to-planogram`
+- **LoadAPI**: `feature/req-1150-move-flags-to-planogram`  
 - **Configuration**: `feature/req-1150-move-flags-to-planogram`
 
 ### **Commit References**
-
 - **Algorithm**: `2e14bef6d` - Move distribution flags from DistributionStoreRow to PlanogramRow
 - **LoadAPI**: `988563d` - Move distribution flags from DistributionStoreLoadApi to PlanogramLoadApi
+- **LoadAPI**: `b037ae2` - Remove DistributionStoreLoadApi, update IstStoreLoadApi and PlanogramIncrementApi
 - **Configuration**: `f39345e` - Update SQL views, sync queries, exports and templates
+- **Configuration**: `266046d` - Update upload-files.json to use ist_store_list instead of dist_store_list
+- **Configuration**: `e5222a7` - Update planogram views and export queries to include distribution flags
+- **Configuration**: `571aef4` - Fix export_dist_input_ist_store_list_template.tsv
+- **Configuration**: `015d719` - Remove dist_store_list and clean up ist_store_list
 
 ---
 
 ## **Deployment Instructions**
 
 ### **Deployment Order**
-
 1. **Configuration Repository** (First) - Update SQL views and sync queries
 2. **LoadAPI Repository** (Second) - Update data processing logic
 3. **Algorithm Repository** (Third) - Update business logic
 
 ### **Data Migration**
-
 - **No data migration required** - flags will be provided in new planogram uploads
 - **Existing planogram data** will default flags to 0 (disabled) via COALESCE in sync queries
 - **Export compatibility maintained** through subquery aggregation
 
 ### **Rollback Procedures**
-
 - Revert commits in reverse order: Algorithm → LoadAPI → Configuration
 - Restore original templates and SQL queries
 - Update planogram uploads to remove flag columns
@@ -188,20 +188,17 @@ Algorithm Access: planogramRow.enabled, planogramRow.inwardFlag, planogramRow.ou
 ## **Success Criteria Validation**
 
 ✅ **Functional Requirements Met**
-
 - Distribution store list now only contains `istgroup` (and `consider_store_empty_while_inwards`)
 - Enabled, inward, outward flags moved to planogram at store category attr/attr1 level
 - All business logic updated to use planogram flags instead of distribution store flags
 
 ✅ **Technical Requirements Met**
-
 - Cross-repository consistency maintained
 - All patterns and conventions followed
 - Comprehensive error handling implemented
 - Complete traceability maintained
 
 ✅ **Quality Requirements Met**
-
 - No breaking changes to existing functionality
 - Export compatibility maintained
 - Template formats updated appropriately
@@ -209,8 +206,7 @@ Algorithm Access: planogramRow.enabled, planogramRow.inwardFlag, planogramRow.ou
 
 ---
 
-## **Implementation Completed**: ✅
-
+## **Implementation Completed**: ✅ 
 **Date**: Current
 **Status**: Ready for deployment
 **Quality**: All validations passed
@@ -222,3 +218,4 @@ To add dist enabled, inward_flag, outward_flag for the planogram entries in the 
 3. if a store+cat+attribute combination in planogram is disabled for distirbution then, DO NOT consider its outwards and inwards flags - hence there should be no movement activity for that planogram combination
 
 additional check - if “should cat planogram be met” is on and planogram is given at attribute level then it should only inwards for those specific combinations of that store+category that have inwards=1 to try to fill the category
+
